[project]
name = "restclient"
version = "0.1.0"
description = "rest client for testing with log"
authors = [
    {name = "Andrey Dudin",email = "my_new81@mai.ru"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
packages = [
    {include = "restclient"},
]
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "curlify2 (>=2.0.0,<3.0.0)",
    "structlog (>=25.3.0,<26.0.0)",
    "allure-pytest (>=2.14.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
